<resources>
    <string name="app_name">Qalam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="podcastSeries">Podcast Series</string>
    <string name="library">Library</string>
    <string name="donate">Donate</string>
    <string name="settings">Settings</string>
    <string name="search_for_podcast">Search For Podcast</string>
    <string name="episode_of_the_week">Episode Of The Week</string>
    <string name="cardViewTitle">Heartwork - Surah Taha 15 by AbdelRahman Murphy on Jun 6</string>
    <string name="cardViewDescription">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more -or-less normal distribution of letters, as opposed to using English.</string>
    <string name="my_podcasts">My Podcasts</string>
    <string name="podcast_title">Podcast Title</string>
    <string name="test_1">For Those Seeking Guidance</string>
    <string name="date_test">Qalam    .         44 Eps </string>
    <string name="a_week_long_experience_with_the">A week-long experience with the…</string>
    <string name="release_28_apr_duration_15_sep">Release 28 Apr | Duration 15 Sep</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="volume">Volume</string>
    <string name="today">Today</string>
    <string name="knowledge_intensive_gain_the_knowledge_of_how_to_practically">Knowledge Intensive (Gain the knowledge of how to practically…</string>
    <string name="ttth">Release 28 Apr |Duration 15 Sep</string>
    <string name="aweek">A week-long experience with the sciences of the Hadith taught by Mufti Hussain Kamani</string>
    <string name="play_latest_episode">Play Latest Episode</string>
    <string name="episode">Episode</string>


</resources>